# hypercommon

./: .gitignore  main.py  pyproject.toml
experiments/ring_lattice/: rewiring_vs_truth.py  thresholds_to_excel.py
generators/: ring_lattice.py
hypercommon/: __init__.py  algorithm.py  hypergraph.py  hypernode.py
metrics/: omega.py
predicates/: __init__.py  jaccard.py
tests/: test_hypergraph.py  test_hypergraph_edge_cases.py  test_jaccard_get_communities.py  test_jaccard_two_components.py
utils/: rewiring.py  threshold.py
